enabling discuss for my page

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
 pygmentscodefences = true # Enable code fence background highlighting.
 pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
 
-disqusShortname = "yourdiscussshortname" # Enable or disable Disqus
+disqusShortname = "vongohren" # Enable or disable Disqus
 
 [params] # theme parameters
     author = "Snorre Lothar von Gohren Edwin" # Author's name.
